--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 
 <html>
     <head>
-        <title>Tinfoil (Public Beta v0.95)</title>
-        <link rel="stylesheet" href="/src/styles/styles.css">
+        <title>Tinfoil Beta Deploy</title>
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="/src/styles/scrollbar.css">
     </head>
 
     <body>
         <h1 style="margin-top: 5px; margin-bottom: 5px;" class="rainbow rainbow_text_animated">
-            Welcome to Tinfoil (Mirror)
+            Tinfoil Deployment Beta
         </h1>
 
     <hr class="solid">
@@ -22,7 +22,7 @@
                 </p>
         </div>
         
-        <footer id="scroll-text">This site will be closed soon for maintence, thank you for your cooperation, please check the website news.</footer>
+        <footer id="scroll-text">Deployment Beta</footer>
         
         <div class="center">
         <a class="rainbow rainbow_text_animated" href="blog1.html">Website news</a>
